Updated all tests (unit and integration) to match the new app structure