@@ -10,12 +10,14 @@ import dev.tomas.dma.entity.Company;
 import dev.tomas.dma.enums.CampaignStatus;
 import dev.tomas.dma.enums.EntityType;
 import dev.tomas.dma.enums.FileType;
+import dev.tomas.dma.mapper.AppFileMapper;
 import dev.tomas.dma.mapper.CampaignMapper;
 import dev.tomas.dma.repository.AppFileRepo;
 import dev.tomas.dma.repository.CampaignRepo;
 import dev.tomas.dma.repository.CompanyRepo;
 import dev.tomas.dma.service.ExternalStorageService;
 import dev.tomas.dma.service.FileService;
+import dev.tomas.dma.service.TicketService;
 import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -27,14 +29,12 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
+import dev.tomas.dma.dto.common.AppFileDTO;
 
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -60,10 +60,17 @@ class CampaignServiceImplTest {
     private FileService fileService;
 
     @Mock
+    private TicketService ticketService;
+
+    @Mock
     private AppFileRepo fileRepo;
+
+    @Mock
+    AppFileMapper fileMapper;
 
     @InjectMocks
     private CampaignServiceImpl campaignService;
+
 
     private Campaign testCampaign;
     private Company testCompany;
@@ -121,7 +128,7 @@ class CampaignServiceImplTest {
         @Test
         @DisplayName("Should return all campaigns")
         void findAll_Success() {
-            List<Campaign> campaigns = Arrays.asList(testCampaign);
+            List<Campaign> campaigns = Collections.singletonList(testCampaign);
             when(campaignRepo.findAll()).thenReturn(campaigns);
             when(campaignMapper.entityToDTO(any(Campaign.class))).thenReturn(testCampaignDTO);
             when(fileRepo.findByEntityTypeAndEntityIdAndFileType(
@@ -138,18 +145,31 @@ class CampaignServiceImplTest {
         @Test
         @DisplayName("Should return campaigns with images")
         void findAll_WithImages() {
+            // 1. Prepare the Entity (Database side)
             AppFile imageFile = new AppFile();
             imageFile.setUrl("http://example.com/image.jpg");
 
-            when(campaignRepo.findAll()).thenReturn(Arrays.asList(testCampaign));
+            // 2. Prepare the DTO (API response side)
+            AppFileDTO imageFileDTO = new AppFileDTO();
+            imageFileDTO.setUrl("http://example.com/image.jpg");
+
+            // 3. Stub the Repo
+            when(campaignRepo.findAll()).thenReturn(Collections.singletonList(testCampaign));
             when(campaignMapper.entityToDTO(any(Campaign.class))).thenReturn(testCampaignDTO);
             when(fileRepo.findByEntityTypeAndEntityIdAndFileType(
                     eq(EntityType.CAMPAIGN), anyInt(), eq(FileType.CAMPAIGN_IMAGE)))
-                    .thenReturn(Arrays.asList(imageFile));
+                    .thenReturn(List.of(imageFile));
 
+            // The service uses this to convert the Entity list to DTO list
+            when(fileMapper.entitiesToDTO(anyList())).thenReturn(List.of(imageFileDTO));
+
+            // 5. Execute
             CampaignGetAllRes result = campaignService.findAll();
 
-            assertThat(result.getCampaigns().getFirst().getFiles().getFirst().getUrl()).contains("http://example.com/image.jpg");
+            // 6. Assert
+            assertThat(result.getCampaigns().getFirst().getFiles()).isNotEmpty(); // Check list isn't empty first
+            assertThat(result.getCampaigns().getFirst().getFiles().getFirst().getUrl())
+                    .contains("http://example.com/image.jpg");
         }
 
         @Test
@@ -224,7 +244,7 @@ class CampaignServiceImplTest {
         void save_Success_WithSingleImage() throws IOException {
             MockMultipartFile image = new MockMultipartFile(
                     "image", "test.jpg", "image/jpeg", "test image content".getBytes());
-            createRequest.setImages(Arrays.asList(image));
+            createRequest.setImages(List.of(image));
 
             when(companyRepo.getReferenceById(1)).thenReturn(testCompany);
             when(campaignRepo.save(any(Campaign.class))).thenAnswer(invocation -> {
